[package]
name = "danubia"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "danubia"
# path = "src/bin.rs"

# [lib]
# name = "danubia"
# path = "src/lib/lib.rs"

[dependencies.sdl2]
version = "0.37.*"
default-features = false
features = ["ttf", "image", "mixer"]

[dependencies.serde]
version = "1.0.*"
features = ["derive"]
